# api-docs.yaml
@@ -33,10 +33,24 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Customer-Information"
+              type: object
+              properties:
+                customer:
+                  type: string
+                  example: Phat
+                table_code:
+                  type: integer
+                  example: 1
           application/x-www-form-urlencoded:
             schema:
-              $ref: "#/components/schemas/Customer-Information"
+              type: object
+              properties:
+                customer:
+                  type: string
+                  example: Phat
+                table_code:
+                  type: integer
+                  example: 1
       responses:
         "200":
           description: Successful response
@@ -720,7 +734,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Get list occupied-tables
-      description:  Waiter and Manager get list occupied-tables
+      description: Waiter and Manager get list occupied-tables
       parameters:
         - name: token
           in: query
@@ -764,7 +778,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: New order
-      description:  Waiter and Manager add new order
+      description: Waiter and Manager add new order
       parameters:
         - name: token
           in: query
@@ -830,7 +844,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Search order
-      description:  Waiter and Manager search order for payment
+      description: Waiter and Manager search order for payment
       parameters:
         - name: token
           in: query
@@ -881,7 +895,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Delete order
-      description:  Waiter and Manager delete order
+      description: Waiter and Manager delete order
       parameters:
         - name: token
           in: query
@@ -923,7 +937,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Payment
-      description:  Waiter and Manager pay an order
+      description: Waiter and Manager pay an order
       parameters:
         - name: token
           in: query
@@ -993,7 +1007,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Bills current shift
-      description:  Manager get list bill in current shift
+      description: Manager get list bill in current shift
       parameters:
         - name: token
           in: query
@@ -1039,7 +1053,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Bills in date
-      description:  Manager get list bill in date selected
+      description: Manager get list bill in date selected
       parameters:
         - name: token
           in: query
@@ -1088,7 +1102,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Bill detail
-      description:  Manager get details of bill
+      description: Manager get details of bill
       parameters:
         - name: token
           in: query
@@ -1133,7 +1147,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: List employees
-      description:  Manager get list employee account
+      description: Manager get list employee account
       parameters:
         - name: token
           in: query
@@ -1168,7 +1182,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Add employee
-      description:  Manager add new employee account
+      description: Manager add new employee account
       parameters:
         - name: token
           in: query
@@ -1212,7 +1226,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Delete employee
-      description:  Manager delete employee account
+      description: Manager delete employee account
       parameters:
         - name: token
           in: query
@@ -1254,7 +1268,7 @@ paths:
       tags:
         - Waiter/Manager
       summary: Edit employee
-      description:  Manager edit employee account
+      description: Manager edit employee account
       parameters:
         - name: token
           in: query
